endpoint for deleting secret has been added, also status code for updating handler was changed from 200 to 204
